<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">

		<item
			android:id="@+id/home_page_menuitem"
			android:icon="@drawable/ic_home_black_24dp"
			android:title="@string/home_page"/>

		<item android:title="@string/my_recipe_book">
			<menu>
				<item
					android:id="@+id/favourite_recipes_menuitem"
					android:icon="@drawable/ic_favorite_black_24dp"
					android:title="@string/favourite_recipes"/>
				<item
					android:id="@+id/my_recipes_menuitem"
					android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
					android:title="@string/my_recipes"/>

				<item
					android:id="@+id/add_recipe_menuitem"
					android:checkable="false"
					android:icon="@drawable/ic_add_circle_black_24dp"
					android:title="@string/add_recipe"/>

			</menu>
		</item>
		<item android:title="@string/all_recipes">
			<menu>
				<group android:checkableBehavior="single">
					<item
						android:id="@+id/top_rated_menuitem"
						android:icon="@drawable/ic_grade_black_24dp"
						android:title="@string/top_rated"/>
					<item
						android:id="@+id/last_added_menuitem"
						android:icon="@drawable/ic_history_black_24dp"
						android:title="@string/last_added"/>

					<item
						android:id="@+id/categories_menuitem"
						android:icon="@drawable/ic_list_black_24dp"
						android:title="@string/categories"/>
				</group>
			</menu>
		</item>
	</group>
	<item
		android:id="@+id/settings_menuitem"
		android:icon="@drawable/ic_settings_black_24dp"
		android:title="@string/settings"/>

</menu>