<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/app_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="true"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/collapsing_toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:expandedTitleMarginEnd="64dp"
			app:expandedTitleMarginStart="48dp"
			app:layout_scrollFlags="scroll|exitUntilCollapsed">

			<com.myapps.myrecipes.SquareImageView
				android:id="@+id/add_recipe_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fitsSystemWindows="true"
				android:scaleType="centerCrop"
				app:layout_collapseMode="parallax"/>

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:layout_collapseMode="pin"/>

		</android.support.design.widget.CollapsingToolbarLayout>

	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:id="@+id/scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="@dimen/content_padding"
				android:paddingRight="@dimen/content_padding">

				<android.support.design.widget.TextInputLayout
					android:id="@+id/title_input_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					app:counterEnabled="true"
					app:counterMaxLength="@integer/title_max_length"
					app:errorEnabled="true">

					<EditText
						android:id="@+id/add_title_editText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/add_title"
						android:singleLine="true"
						android:textSize="16sp"/>
				</android.support.design.widget.TextInputLayout>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:labelFor="@+id/ingredients_layout"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:text="@string/ingredients"
					android:textSize="12sp"/>

				<LinearLayout
					android:id="@+id/ingredients_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>

				<Button
					android:id="@+id/add_ingredient"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:text="@string/add_ingredient"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:paddingTop="16dp"
					android:text="@string/select_category"
					android:textSize="12sp"/>

				<Spinner
					android:id="@+id/category_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="4dp"
					android:paddingRight="4dp"
					android:paddingTop="16dp"
					android:text="@string/select_difficulty"
					android:textSize="12sp"/>

				<Spinner
					android:id="@+id/difficulty_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/add_recipe_description"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/description"
						android:inputType="textMultiLine"/>
				</android.support.design.widget.TextInputLayout>

			</LinearLayout>
		</RelativeLayout>
	</android.support.v4.widget.NestedScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab_add_photo"
		style="@style/FabStyle"
		android:src="@drawable/ic_photo_camera_black_36dp"
		app:layout_anchor="@id/app_bar_layout"
		app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>