<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

	<ImageView
		android:id="@+id/image"
		android:layout_width="match_parent"
		android:layout_height="@dimen/flexible_space_image_height"
		android:contentDescription="@string/recipe_image"
		android:scaleType="centerCrop"/>

	<View
		android:id="@+id/overlay"
		android:layout_width="match_parent"
		android:layout_height="@dimen/flexible_space_image_height"
		android:background="@color/primary"/>

	<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
		android:id="@+id/scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/flexible_space_image_height"
				android:background="@android:color/transparent"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/white"
				android:orientation="vertical">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/primaryLight"
					android:padding="10dp">

					<RatingBar
						android:id="@+id/recipeRatingBar"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:stepSize="0.5"/>

					<TextView
						android:id="@+id/category_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/recipeRatingBar"
						android:text="@string/category"/>

					<TextView
						android:id="@+id/category_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/recipeRatingBar"
						android:layout_marginLeft="5dp"
						android:layout_marginStart="5dp"
						android:layout_toEndOf="@+id/category_label"
						android:layout_toRightOf="@+id/category_label"/>

					<TextView
						android:id="@+id/difficulty_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/category_label"
						android:layout_marginTop="5dp"
						android:text="@string/difficulty"/>

					<TextView
						android:id="@+id/difficulty_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/category_label"
						android:layout_marginLeft="5dp"
						android:layout_marginStart="5dp"
						android:layout_marginTop="5dp"
						android:layout_toEndOf="@+id/difficulty_label"
						android:layout_toRightOf="@+id/difficulty_label"/>
				</RelativeLayout>

				<LinearLayout
					android:id="@+id/recipe_activity_ingredients_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>

				<TextView
					android:id="@+id/recipe_activity_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

			</LinearLayout>
		</LinearLayout>
	</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:gravity="center_vertical"
			android:maxLines="1"
			android:minHeight="?attr/actionBarSize"
			android:paddingLeft="@dimen/margin_standard"
			android:paddingRight="@dimen/margin_standard"
			android:textColor="@android:color/white"
			android:textSize="26sp"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/flexible_space_image_height"
			android:background="@android:color/transparent"/>
	</LinearLayout>

	<com.melnykov.fab.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start|top"
		android:scaleType="center"
		app:fab_colorNormal="@color/accent_light"
		app:fab_colorPressed="@color/accent"/>
</FrameLayout>